<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_logosmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/woman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_black"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImage" />

    <TextView
        android:id="@+id/numberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView" />

    <TextView
        android:id="@+id/infoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoView" />


    <com.example.infinotest.components.LeftMenuButton
        android:id="@+id/mbFill"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_fill"
        app:imageRes="@drawable/ic_path_7658"
        app:layout_constraintBottom_toTopOf="@+id/mbPay"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoView"
        app:text="@string/head_b_fill">

    </com.example.infinotest.components.LeftMenuButton>

    <com.example.infinotest.components.LeftMenuButton
        android:id="@+id/mbPay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_pay"
        app:imageRes="@drawable/ic_path_7663"
        app:layout_constraintBottom_toTopOf="@+id/mbReports"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbFill"
        app:text="@string/head_b_pay">

    </com.example.infinotest.components.LeftMenuButton>

    <com.example.infinotest.components.LeftMenuButton
        android:id="@+id/mbReports"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_rep"
        app:imageRes="@drawable/ic_path_6584"
        app:layout_constraintBottom_toTopOf="@+id/mbInfo"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbPay"
        app:text="@string/head_b_rep">

    </com.example.infinotest.components.LeftMenuButton>

    <com.example.infinotest.components.LeftMenuButton
        android:id="@+id/mbInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_info"
        app:imageRes="@drawable/ic_path_9215"
        app:layout_constraintBottom_toTopOf="@+id/mbOrders"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbReports"
        app:text="@string/head_b_info">

    </com.example.infinotest.components.LeftMenuButton>

    <com.example.infinotest.components.LeftMenuButton
        android:id="@+id/mbOrders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_order"
        app:imageRes="@drawable/ic_path_6535"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbInfo"
        app:text="@string/head_b_order">

    </com.example.infinotest.components.LeftMenuButton>

    <com.example.infinotest.components.RightMenuButton
        android:id="@+id/mbCheck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_check"
        app:imageRes="@drawable/ic_path_6575"
        app:layout_constraintBottom_toTopOf="@+id/mbContrib"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/infoView"
        app:text="@string/head_b_check" />

    <com.example.infinotest.components.RightMenuButton
        android:id="@+id/mbContrib"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_in"
        app:imageRes="@drawable/ic_path_6787"
        app:layout_constraintBottom_toTopOf="@+id/mbResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/mbCheck"
        app:text="@string/head_b_in" />

    <com.example.infinotest.components.RightMenuButton
        android:id="@+id/mbResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_res"
        app:imageRes="@drawable/ic_path_9216"
        app:layout_constraintBottom_toTopOf="@+id/mbMessages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/mbContrib"
        app:text="@string/head_b_res" />

    <com.example.infinotest.components.RightMenuButton
        android:id="@+id/mbMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_msg"
        app:imageRes="@drawable/ic_path_9213"
        app:layout_constraintBottom_toTopOf="@+id/mbProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/mbResults"
        app:text="@string/head_b_msg" />

    <com.example.infinotest.components.RightMenuButton
        android:id="@+id/mbProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="true"
        android:tag="menubutton"
        app:descriptionText="@string/info_b_profile"
        app:imageRes="@drawable/ic_path_6394"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/mbMessages"
        app:text="@string/head_b_profile" />
</androidx.constraintlayout.widget.ConstraintLayout>